--- a/Cosas/Resources/layout/Main.axml
+++ b/Cosas/Resources/layout/Main.axml
@@ -5,10 +5,24 @@
     android:layout_height="match_parent"
     android:minWidth="25px"
     android:minHeight="25px">
-    <ListView
-        android:minWidth="25px"
-        android:minHeight="25px"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/list" />
+  <Button
+      android:text="@string/authenticate"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:id="@+id/authenticate"
+      android:visibility="gone"/>
+  <TextView
+      android:text="@string/loading"
+      android:textAppearance="?android:attr/textAppearanceMedium"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:id="@+id/loading"
+      android:padding="20dp"
+      android:gravity="center"/>
+  <ListView
+      android:minWidth="25px"
+      android:minHeight="25px"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:id="@+id/list" />
 </LinearLayout>
