--- a/Cosas/Resources/layout/MainMenu.axml
+++ b/Cosas/Resources/layout/MainMenu.axml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
   <item android:id="@+id/search"
-         android:title="@string/search"
-         android:showAsAction="ifRoom"
-         android:actionViewClass="android.widget.SearchView" />
+      android:title="@string/search"
+      android:icon="@drawable/ic_search_black_24dp"
+      android:showAsAction="always|collapseActionView"
+      android:actionViewClass="android.widget.SearchView" />
   <item
       android:id="@+id/add_thing"
       android:icon="@drawable/ic_add_black_24dp"
